@@ -31,24 +31,26 @@ my %WriteMakefileArgs = (
   "ABSTRACT" => "Interface to the libuv library L<http://libuv.org>",
   "AUTHOR" => "Chase Whitener <capoeirab\@cpan.org>",
   "BUILD_REQUIRES" => {
-    "Alien::Build" => "1.00",
+    "Alien::Build" => "2.11",
     "Alien::Build::MM" => "0.32",
     "Alien::Build::Plugin::Build::Make" => 0,
+    "Alien::Build::Plugin::Probe::Vcpkg" => "2.11",
     "Config" => 0,
     "ExtUtils::MakeMaker" => "6.52",
     "IPC::Cmd" => 0
   },
   "CONFIGURE_REQUIRES" => {
-    "Alien::Build" => "0.32",
+    "Alien::Build" => "1.14",
     "Alien::Build::MM" => "0.32",
     "Alien::Build::Plugin::Build::Make" => "0.01",
+    "Alien::Build::Plugin::Probe::Vcpkg" => "2.14",
     "ExtUtils::MakeMaker" => "6.52"
   },
   "DISTNAME" => "Alien-libuv",
   "LICENSE" => "perl",
   "NAME" => "Alien::libuv",
   "PREREQ_PM" => {
-    "Alien::Base" => "1.00",
+    "Alien::Base" => "2.11",
     "base" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -68,10 +70,11 @@ my %WriteMakefileArgs = (
 );
 
 my %FallbackPrereqs = (
-  "Alien::Base" => "1.00",
-  "Alien::Build" => "1.00",
+  "Alien::Base" => "2.11",
+  "Alien::Build" => "2.11",
   "Alien::Build::MM" => "0.32",
   "Alien::Build::Plugin::Build::Make" => 0,
+  "Alien::Build::Plugin::Probe::Vcpkg" => "2.11",
   "Config" => 0,
   "ExtUtils::MakeMaker" => "6.52",
   "File::Spec" => 0,
